[package]
name = "bsp2svg"
description = "Convert BSP to SVG"
categories = ["parsing"]
keywords = ["bsp", "converter", "quake", "quakeworld", "svg"]
repository = "https://github.com/vikpe/bsp2svg"
authors = ["Viktor Persson"]
version = "0.1.0"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

[dependencies]
anyhow = "1.0.95"
bspparser = "0.10.0"
image = "0.25.5"
svg = "0.18.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
pretty_assertions = "1.4.1"

[[bench]]
name = "bench_lib"
harness = false
